# raspi-server

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  Makefile  README.md  config.json  control  db_management.cpp  db_management.hpp  insert_test_data.sql  media.txt  metadata_parser.cpp  metadata_parser.hpp  reset_db.sql  rtsp_server.cpp  rtsp_server.hpp  server  server.cpp  server_bbox.hpp  tcp_server.cpp  tcp_server.hpp
.github/workflows/: docs.yml
docs/: .gitignore  Doxyfile  DoxygenLayout.xml  fix-translations.sh  header.html
docs/css/: custom-layout.css
metadata/: board_control.h  control  main_control.cpp  send_time  test1.cpp
otp/: readme.md
otp/otp_console/: Makefile
src/: config_manager.cpp  config_manager.hpp  curl_camera.cpp  curl_camera.hpp  db_management.cpp  db_management.hpp  hash.cpp  hash.hpp  json.hpp  metadata_parser.cpp  metadata_parser.hpp  request_handlers.cpp  request_handlers.hpp  rtsp_server.cpp  rtsp_server.hpp  server_bbox.hpp  ssl.cpp  ssl.hpp  tcp_server.cpp  tcp_server.hpp  tcp_server_backup.cpp  tcp_server_refactored.cpp  tcp_server_refactored.hpp  utils.cpp  utils.hpp
src/metadata/: board_control.cpp  board_control.h  main_control.cpp  send_time.cpp  test1.cpp
src/otp/: otp_manager.cpp  otp_manager.hpp
test_client/: Makefile  readme.md  test_client  test_client.cpp
test_client/otp_console/: Makefile  main.cpp  otp_manager.cpp  otp_manager.hpp  user_manager.cpp  user_manager.hpp
